fixed scrollbar going in wrong direction
changed: scrollbars will showup whenever user hover over the bottom of each chart

--- a/css/style.css
+++ b/css/style.css
@@ -668,7 +668,7 @@ body::-webkit-scrollbar {
 .outer #rsi.component,
 .outer #sentiment.component {
   padding-top: 0px;
-  padding-bottom: 20px;
+  /*padding-bottom: 20px;*/
 }
 .outer #sentiment.component {
   padding-bottom: 0;
